work on development settings

--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -50,11 +50,7 @@
                             <a href="notifications.html"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
                         </li>
                          <li>
-<<<<<<< HEAD
                             <a href="settings.html"><i class="fa fa-fw fa-gear"></i> Settings</a>
-=======
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
->>>>>>> develop
                         </li>
                         <li class="divider"></li>
                         <li>
@@ -75,7 +71,7 @@
                         <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
                     </li>
                     <li>
-                        <a href="deletebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
+                        <a href="managebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
                     </li>
 
                     <li>
@@ -122,10 +118,6 @@
                         </ol> <!-- / searchBox -->
                     </div>
                 </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> develop
 
 
        <!-- books Row -->
@@ -133,7 +125,7 @@
             <div class="col-md-4 portfolio-item">
                 <a href="#">
                 <div class="span1">
-                <img height="100" width="100" src="http://i.ytimg.com/vi/uGBKzIY4mpc/0.jpg" />
+                <img class="img-responsive" src="http://placehold.it/700x400" alt="" />
                 </div>
 
                     <!-- <img class="img-responsive" src="http://placehold.it/700x400" alt=""> -->
