--- a/template/managebooks.html
+++ b/template/managebooks.html
@@ -68,7 +68,7 @@
                         <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
                     </li>
                     <li class="active">
-                        <a href="deletebooks.html"><i class="fa fa-fw fa-table"></i>Delete Books</a>
+                        <a href="managebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
                     </li>
 
                     <li>
@@ -100,7 +100,7 @@
                     <div class="col-lg-12">
                       <center>
                         <h1 class="page-header">
-                            Delete Books <small></small>
+                            Manage Books <small></small>
                         </h1>
                       </center>
                       <!-- search box -->
@@ -143,7 +143,7 @@
                                     <span class="pull-left">Delete</span>
                                   </a>
                                   <a href="#">
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right">Archieve</i></span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right">Edit</i></span>
                                   </a>
                                     <div class="clearfix"></div>
                                 </div>
@@ -167,7 +167,7 @@
                             <a href="#">
                                 <div class="panel-footer">
                                     <span class="pull-left">Delete</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Archieve</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -190,8 +190,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -213,8 +213,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -243,8 +243,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -266,8 +266,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -290,8 +290,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -313,8 +313,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -344,8 +344,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -367,8 +367,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -391,8 +391,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
@@ -414,8 +414,8 @@
                             </div>
                             <a href="#">
                                 <div class="panel-footer">
-                                    <span class="pull-left">View Details</span>
-                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <span class="pull-left">Delete</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>Edit</span>
                                     <div class="clearfix"></div>
                                 </div>
                             </a>
