--- a/template/untitled.html
+++ b/template/untitled.html
@@ -1,27 +1,9 @@
 <!DOCTYPE html>
-
-<!-- Designs were Built upon Bootstrap starter template with fixed left aligned vertical nav bar
-    and fixed Top menu Item
--->
-
-<!-- CSS Frameworks used: Bootstrap, Font-Awesome -->
-<!-- Javascript Frameworks used: Jquery, bootstrap.min.js  -->
-<html lang="en">
-
+<html>
 <head>
-
-    <meta charset="utf-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="library management">
-    <meta name="author" content="hellobooks">
-
-    <title>Dashboard</title>
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/hb-admin.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
- <style type="text/css">
+  <title></title>
+   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <style type="text/css">
     
     .timeline{list-style:none;padding:0 0 20px;position:relative;margin-top:-15px}
     .timeline:before{top:30px;bottom:25px;position:absolute;content:" ";width:3px;background-color:#ccc;left:25px;margin-right:-1.5px}
@@ -84,102 +66,11 @@
           .timeline-badge.danger{background-color:#d9534f!important}.timeline-badge.info{background-color:#5bc0de!important}.timeline-title{margin-top:0;color:inherit}.timeline-body>p,.timeline-body>ul{margin-bottom:0;margin-top:0}.timeline-body>p+p{margin-top:5px}.timeline-badge>.glyphicon{margin-right:0px;color:#fff}.timeline-body>h4{margin-bottom:0!important}
   </style>
 
-
 </head>
-
 <body>
 
-    <div id="wrapper">
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-           
-            <div class="navbar-header">
-
-                <a class="navbar-brand" href="dashboard.html">Admin Dashboard</a>
-            </div>
-            <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>Martins Onuoha<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="profile.html"><i class="fa fa-fw fa-user"></i> Profile</a>
-                        </li>
-                         <li>
-                            <a href="notifications.html"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
-                        </li> 
-                         <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                        </li> 
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-    <!-- SIDE BAR MENU  -->
-            
-             <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav side-nav">
-                    <li> 
-                        <a href="dashboard.html"><i class="fa fa-fw fa-book"></i>Library</a>
-                    </li>
-                    <li>
-                        <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
-                    </li>
-                    <li>
-                        <a href="managebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
-                    </li>
-
-                    <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i>View Users <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo" class="collapse">
-                            <li>
-                                <a href="#">Free</a>
-                            </li>
-                            <li>
-                                <a href="#">Pro</a>
-                            </li>
-                            <li>
-                                <a href="#">Admin</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                </ul>
-            </div> 
-            <!-- /end .navbar-collapse -->
-        </nav>
-           <!-- /end side bar menu -->
-
-        <div id="page-wrapper">
-
-            <div class="container-fluid">
-
-                <!-- Page Heading -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <!-- <center>
-                        <h1 class="page-header">
-                            Notifications
-                        </h1>
-                        </center> -->
-                          
-                         <ol class="breadcrumb" style="text-align: center;">
-                            <h1>
-                            <small><i class="fa fa-fw fa-envelope"></i>Notifications</small>
-                            </h1>
-                          <li class="active">
-                                
-                            </li> 
-                         </ol> 
-                    </div>
-                </div>
-                <div height="500px;" style="padding-bottom: 500px;" id="profile-container">
-                  <div class="container">
+<div class="container">
     <ul class="timeline">
         <li>
           <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
@@ -283,22 +174,9 @@
     </ul>
 </div>
 
-                </div>
-
-            </div> 
-            <!-- /.container-fluid -->
-
-        </div>
-        <!-- /#page-wrapper -->
-
-    </div>
-    <!-- /#wrapper -->
-
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-
-
+ <script src="js/jquery.js"></script>
+  <script src="js/bootstrap.js"></script>
 
 </body>
-
 </html>
+
