client side implementation

--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -18,7 +18,8 @@
     <meta name="author" content="hellobooks">
 
     <title>Dashboard</title>
-
+    
+    <link href="./css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/hb-admin.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -133,6 +134,7 @@
                 <h3>
                     <a href="#">Things Fall Apart</a>
                 </h3>
+                <a href="#" class="btn waves-effect btn-small">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -161,7 +163,7 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Name</a>
+                    <a href="#">Book Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
@@ -170,7 +172,7 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Name</a>
+                    <a href="#">Book Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
@@ -179,7 +181,7 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#"></a>
+                    <a href="#">Book Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
@@ -363,19 +365,18 @@
             </div>
             <!-- /.container-fluid -->
 
-<<<<<<< HEAD
+
         </div>
 
 <!-- /#page-wrapper -->
     </div>
-=======
+
         </div> <!-- /#page-wrapper -->
->>>>>>> develop
+
 
     </div>    <!-- /#wrapper -->
 
     <script src="js/jquery.js"></script>
-
     <script src="js/bootstrap.min.js"></script>
         <!-- Menu Toggle Script -->
 </body>
