materialize admin dashboard

--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -19,9 +19,10 @@
 
     <title>Dashboard</title>
     
-    <link href="./css/materialize.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="./css/materialize.min.css" rel="stylesheet" type="text/css"> -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/hb-admin.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" media="screen,projection" href="css/master.css" />
 
@@ -134,7 +135,7 @@
                 <h3>
                     <a href="#">Things Fall Apart</a>
                 </h3>
-                <a href="#" class="btn waves-effect btn-small">Borrow</a>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -142,8 +143,9 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">The Famished Road</a>
+                    <a href="#">The Famished Road</a> 
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -153,6 +155,7 @@
                 <h3>
                     <a href="#">Beast Of No Nation</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
@@ -165,6 +168,7 @@
                 <h3>
                     <a href="#">Book Name</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -174,6 +178,7 @@
                 <h3>
                     <a href="#">Book Name</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -183,6 +188,7 @@
                 <h3>
                     <a href="#">Book Name</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
@@ -196,6 +202,7 @@
                 <h3>
                     <a href="#">Tears for Sale</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -205,6 +212,7 @@
                 <h3>
                     <a href="#">Purple Hibiscus</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -214,6 +222,7 @@
                 <h3>
                     <a href="#">Half of a Yello Sun</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
@@ -227,6 +236,7 @@
                 <h3>
                     <a href="#">My name is Okon</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -236,6 +246,7 @@
                 <h3>
                     <a href="#">Story Behind the Biafra</a>
                 </h3>
+                <a href="login.html" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -245,6 +256,7 @@
                 <h3>
                     <a href="#">Live to Die another Day</a>
                 </h3>
+                <a href="#" class="btn">Borrow</a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
