--- a/template/index.html
+++ b/template/index.html
@@ -14,12 +14,12 @@
 <body>
 
 	<header>
-		<h2><a href="#"><img src="img/books.gif" alt="User-image here" height="100px" width="100px" style="margin-top: 2px;"/></a></h2>
+		<h2><a href="#"><img src="assets/img/books.gif" alt="logo" height="100px" width="100px" style="margin-top: 2px;"/></a></h2>
 	</header>
 
 
 	<section class="hello">
-		<div class="background-image" style="background-image: url(img/back.jpg);"></div>
+		<div class="background-image" style="background-image: url(assets/img/back.jpg);"></div>
 		<h1>Welcome to Hello Books.</h1>
 		<h3>let's use your spare time wisely...</h3>
 		<a href="login.html" class="btn">Login</a>
