materialize landing page

--- a/template/indexmaterial.html
+++ b/template/indexmaterial.html
@@ -165,7 +165,7 @@ button {
             <li><a class="white-text" href="#!"><i class="fa fa-fw fa-facebook-official"></i>Facebook</a></li>
             <li><a class="white-text" href="#!"><i class="fa fa-fw fa-instagram"></i>Instagram</a></li>
             <li><a class="white-text" href="#!"><i class="fa fa-fw fa-medium"></i>Medium</a></li>
-            <li><a class="white-text" href="#!"><i class="fa fa-fw fa-envelope"></i>Link 4</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-fw fa-youtube-"></i>Link 4</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
