fixed es6 compatibility error

--- a/template/dashboardadmin.html
+++ b/template/dashboardadmin.html
@@ -12,7 +12,7 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> -->
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+ 
 <style>
 .thumbnail {
   height: 100px;
@@ -120,6 +120,131 @@ div #cards {
         </div>
        </nav>
     </form> -->
+
+<!-- CARDS ROW -->
+<div class = "row">
+  <!-- card -->
+   <div class = "col s12 m3">
+      <div class = "card blue-grey lighten-4 sticky-action hoverable">
+         <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator tooltipped" data-position="top" data-delay="0" data-tooltip="Click to view details." src = "assets/images/yellow.jpg" height="293px" /> 
+                           
+         </div>
+         
+         <!-- <div class = "card-content activator">                  
+            <p>Click the image to reveal more information.</p>
+         </div> -->
+         
+         <div class = "card-reveal">
+            <span class = "card-title grey-text text-darken-4">About Book
+               <i class = "material-icons right">close</i></span>
+               <hr>
+               <p>What you behold is some random stuff about absolutely nothing. Perhaps you
+                   may or may not feel as though I have wasted your precious time, but really we
+                   both know you had nothing meaningful to do with your time anyways :-).
+                   <p><label>Author: </label></p>
+                   <p><label>Copies: </label></p>
+               </p>
+         </div>
+         
+         <div class = "card-action">
+             <button class = "btn waves-effect waves-light cyan" onclick=" Materialize.toast('Book Borrowed!', 1000, 'rounded')">borrow
+                 <i class="material-icons left">add_shopping_cart</i></button> 
+                 <span class="new badge purple lighten-2 pulse"></span>
+          </div>
+      </div>
+   </div>
+    <!-- card -->
+   <div class = "col s12 m3">
+       <div class = "card blue-grey lighten-4 sticky-action hoverable">
+          <div class="card-image waves-effect waves-block waves-light">
+             <img class="activator tooltipped" data-position="top" data-delay="0" data-tooltip="Click to view details." src = "assets/images/value.jpg" height="293px">                
+          </div>
+          
+          <!-- <div class = "card-content activator">                  
+             <p>Click the image to reveal more information.</p>
+          </div> -->
+          
+          <div class = "card-reveal">
+             <span class = "card-title grey-text text-darken-4">About Book
+                <i class = "material-icons right">close</i></span>
+                <hr>
+                <p>What you behold is some random stuff about absolutely nothing. Perhaps you
+                   may or may not feel as though I have wasted your precious time, but really we
+                   both know you had nothing meaningful to do with your time anyways :-).
+                   <p><label>Author: </label></p>
+                   <p><label>Copies: </label></p>
+                 </p>
+          </div>
+          
+          <div class = "card-action">
+               <button class = "btn waves-effect waves-light cyan" onclick=" Materialize.toast('Book Borrowed!', 1000, 'rounded')">borrow
+                 <i class="material-icons left">add_shopping_cart</i></button>
+                 <span class="new badge teal darken-1 pulse"></span>
+          </div>
+       </div>
+    </div>
+    <!-- card -->
+    <div class = "col s12 m3">
+       <div class = "card blue-grey lighten-4 sticky-action hoverable">
+          <div class="card-image waves-effect waves-block waves-light">
+             <img class="activator tooltipped" data-position="top" data-delay="0" data-tooltip="Click to view details." src = "assets/images/uhuru.jpg" height="293px">                
+          </div>
+          
+          <!-- <div class = "card-content activator">                  
+             <p>Click the image to reveal more information.</p>
+          </div> -->
+          
+          <div class = "card-reveal">
+             <span class = "card-title grey-text text-darken-4">About Book
+                <i class = "material-icons right">close</i></span>
+                <hr>
+                <p>What you behold is some random stuff about absolutely nothing. Perhaps you
+                   may or may not feel as though I have wasted your precious time, but really we
+                   both know you had nothing meaningful to do with your time anyways :-).
+                   <p><label>Author: </label></p>
+                   <p><label>Copies: </label></p>
+                 </p>
+          </div>
+          
+          <div class = "card-action">
+               <button class = "btn waves-effect waves-light cyan" onclick=" Materialize.toast('Book Borrowed!', 1000, 'rounded')">borrow
+                 <i class="material-icons left">add_shopping_cart</i></button>
+                 <span class="new badge light-green pulse"></span>
+          </div>
+       </div>
+    </div>
+     <!-- card -->
+    <div class = "col s12 m3">
+       <div class = "card blue-grey lighten-4 sticky-action hoverable">
+          <div class="card-image waves-effect waves-block waves-light">
+             <img class="activator tooltipped" data-position="top" data-delay="0" data-tooltip="Click to view details." src = "assets/images/face.jpg" height="293px">                
+          </div>
+          
+          <!-- <div class = "card-content activator">                  
+             <p>Click the image to reveal more information.</p>
+          </div> -->
+          
+          <div class = "card-reveal">
+             <span class = "card-title grey-text text-darken-4">About Book
+                <i class = "material-icons right">close</i></span>
+                <hr>
+                <p>What you behold is some random stuff about absolutely nothing. Perhaps you
+                   may or may not feel as though I have wasted your precious time, but really we
+                   both know you had nothing meaningful to do with your time anyways :-).
+                   <p><label>Author: </label></p>
+                   <p><label>Copies: </label></p>
+                 </p>
+          </div>
+          
+          <div class = "card-action">
+               <button class = "btn waves-effect waves-light cyan" onclick=" Materialize.toast('Book Borrowed!', 1000, 'rounded')">borrow
+                 <i class="material-icons left">add_shopping_cart</i></button>
+          </div>
+       </div>
+    </div>
+</div>
+
 <!-- CARDS ROW -->
 <div class = "row">
   <!-- card -->
@@ -1166,7 +1291,7 @@ div #cards {
             <div class="footer-copyright">
               <div class="container">
               &copy 2018 Copyright Hello Books 
-              <a class="grey-text text-lighten-4 right" href="#!">Martins Onuoha</a>
+              <a class="grey-text text-lighten-4 right" href="#!">CodeFalls inc.</a>
               </div>
             </div>
           </footer>
