--- a/template/indexmaterial.html
+++ b/template/indexmaterial.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Welcome to Hello Books</title>
-
+  <link rel="icon" href="assets/images/bunny.gif" type="image/gif" sizes="16x16">
   <!-- CSS  -->
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -20,22 +20,40 @@
 
 /* animation code */
 @keyframes example {
-    0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:yellow; left:200px; top:0px;}
+    0%   {background-color:teal; left:0px; top:0px;}
+    25%  {background-color:#F1E971; left:200px; top:0px;}
     50%  {background-color:blue; left:200px; top:200px;}
     75%  {background-color:green; left:0px; top:200px;}
     85%  {transform: rotateY(360deg);}
     100% {background-color:red; left:0px; top:0px;}
 }
 
-button {
-    animation: example 5s linear 2s 3 alternate;
+button #login {
+    animation: example 10s linear 1s 3 alternate;
+}
+
+/* cover */
+.cover {
+  text-align: center;
+  margin: 100px auto;
+  padding-top: 3px; 
+  width: 300px;
+  height: 50px;
+  vertical-align: middle;
+  white-space: nowrap;
+  position: relative;
+  background: #2b303b;
+  color: #262626;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #fff;
 }
 
 
 </style>
 </head>
-<body>
+<body class="grey lighten-3">
 
   <!-- <nav class="white" role="navigation">
     <div class="nav-wrapper container">
@@ -51,7 +69,7 @@ button {
     </div>
   </nav> -->
 
-  <div id="index-banner" class="parallax-container" style="height: 700px;">
+  <div id="index-banner" class="parallax-container" style="height: 750px;">
   <header>   
    <img src="assets/img/books.gif" alt="logo" height="100px" width="100px" style="margin: 20px;"/></a>
   </header>      
@@ -63,8 +81,8 @@ button {
           <h5 class="header col s12 light">An Online Library that keeps you glued to your device for a good course...</h5>
         </div>
         <div class="row center">
-          <a href="#!" id="download-button" class="btn-large waves-effect waves-light green lighten-1 pulse" onclick="Materialize.toast('Please wait...!', 5000, 'rounded')">Get Started<i class="material-icons left">airplanemode_active</i></a><br />
-          <button class = "btn waves-effect waves-light cyan pulse" onclick=" Materialize.toast('Initializing Login...!', 5000, 'rounded')" style="margin-top: 10px;">LOGIN
+          <a href="#!" id="download-button" class="btn-large waves-effect waves-light green lighten-1 pulse" onclick="Materialize.toast('Please wait...', 5000, 'rounded')">Get Started<i class="material-icons left">airplanemode_active</i></a><br />
+          <button id="login" class = "btn waves-effect waves-light cyan pulse" onclick=" Materialize.toast('Initializing Login...', 5000, 'rounded')" style="margin-top: 10px;">LOGIN
               <i class="material-icons left">vpn_key</i></button>
         </div>
         <br><br>
@@ -85,7 +103,7 @@ button {
             <h2 class="center brown-text"><i class="material-icons">library_books</i></h2>
             <h5 class="center">Awesome Book Collections</h5>
 
-            <p class="light">We've taken the pain to search the globe for awesome books that we suites your taste, whatever it be.</p>
+            <p class="light">We've taken the pain to search the globe for awesome books that suites your taste, whatever it be.</p>
           </div>
         </div>
 
@@ -116,7 +134,7 @@ button {
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light brown-text">Brace yourself, we're about to animate your world.</h5>
+          <h5 class="header col s12 light brown-text"><b>Brace yourself, we're about to animate your reading world.</b></h5>
         </div>
       </div>
     </div>
@@ -129,8 +147,9 @@ button {
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4><i class="fa fa-fw fa-envelope"></i>Contact Us</h4>
+          <h4><i class="fa fa-fw fa-envelope brown-text"></i>Contact Us</h4>
           <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+
         </div>
       </div>
 
@@ -142,14 +161,33 @@ button {
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Oh wow look...A new User.</h5>
+          <h5 class="header col s12 light"><b>Oh wow look...A new User.</b></h5>
         </div>
       </div>
     </div>
     <div class="parallax"><img src="assets/images/cathigh.gif" alt="Unsplashed background img 3"></div>
   </div>
 
-  <footer class="page-footer teal">
+      <div class="row">
+          <div class="col s12 center">
+              <h3><i class="mdi-content-send brown-text"></i></h3>
+              <h4><i class="fa fa-fw fa-book brown-text"></i>Recommended Reads</h4>
+            </div>
+        <div class="col s12 m3">
+          <div class="card blue-grey lighten-4 sticky-action hoverable">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src = "assets/images/things.jpg" height="350px" class="materialboxed">
+            </div>
+            <div class = "card-action">
+                <button class = "btn waves-effect waves-light cyan" onclick=" Materialize.toast('First, You need to Login.', 5000, 'rounded')">borrow
+                    <i class="material-icons left">add_shopping_cart</i></button> 
+                    <span class="new badge purple lighten-2 pulse"></span>
+             </div>
+          </div>
+        </div>
+      </div>
+
+  <footer class="page-footer grey darken-4">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -159,27 +197,17 @@ button {
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+        <div class="col l3 s12 right">
+          <h5 class="white-text">Connect</h5>
           <ul>
             <li><a class="white-text" href="#!"><i class="fa fa-fw fa-facebook-official"></i>Facebook</a></li>
             <li><a class="white-text" href="#!"><i class="fa fa-fw fa-instagram"></i>Instagram</a></li>
             <li><a class="white-text" href="#!"><i class="fa fa-fw fa-medium"></i>Medium</a></li>
-            <li><a class="white-text" href="#!"><i class="fa fa-fw fa-youtube-"></i>Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
+    <div class="footer-copyright teal">
       <div class="container">
       &copy 2017 <a class="brown-text text-lighten-3" href="#!">Hello Books</a>
       </div>
@@ -191,6 +219,12 @@ button {
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script>
+//Material Box 
+  $(document).ready(function(){
+    $('.materialboxed').materialbox();
+  });
+
+//Parallax
   (function($){
   $(function(){
 
