--- a/template/css/materializeicons.css
+++ b/template/css/materializeicons.css
@@ -2,12 +2,12 @@
     font-family: 'Material Icons';
     font-style: normal;
     font-weight: 400;
-    src: url(/home/martinsonuoha/Documents/Hello-Books/template/assets/icons/MaterialIcons-Regular.eot); /* For IE6-8 */
+    src: url(../assets/icons/MaterialIcons-Regular.eot); /* For IE6-8 */
     src: local('Material Icons'),
          local('MaterialIcons-Regular'),
-         url(/home/martinsonuoha/Documents/Hello-Books/template/assets/icons/MaterialIcons-Regular.woff2) format('woff2'),
-         url(/home/martinsonuoha/Documents/Hello-Books/template/assets/icons/MaterialIcons-Regular.woff) format('woff'),
-         url(/home/martinsonuoha/Documents/Hello-Books/template/assets/icons/MaterialIcons-Regular.ttf) format('truetype');
+         url(../assets/icons/MaterialIcons-Regular.woff2) format('woff2'),
+         url(../assets/icons/MaterialIcons-Regular.woff) format('woff'),
+         url(../assets/icons/MaterialIcons-Regular.ttf) format('truetype');
   }
   
   .material-icons {
