--- a/template/indexmaterial.html
+++ b/template/indexmaterial.html
@@ -7,7 +7,8 @@
   <link rel="icon" href="assets/images/bunny.gif" type="image/gif" sizes="16x16">
   <!-- CSS  -->
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/materializeicons.css" rel="stylesheet">
   <link type="text/css" href="assets/fonts/ubuntu-font.css" rel="stylesheet"/>
